package com.techstore.decorator;

import com.techstore.pedido.Calculavel;

public abstract class PedidoDecorator implements Calculavel {
}
