package com.techstore.pedido;

public interface Calculavel {
}
